--- a/css/2020/04/24_style.css
+++ b/css/2020/04/24_style.css
@@ -1,12 +1,12 @@
 body {
-  background-color: #9dc0ca;
+  background-color: ;
   padding: 0px;
   margin: 0px;
 }
 
 #snowbanner {
   width: 100%;
-  height: 100vh;
+  height: ;
   overflow: hidden;
   pointer-events: none;
   background-image: url("");
